force-app/main/default/objects/Payroll__c/Payroll__c.object-meta.xml
<CustomObject>
    <label>Payroll</label>
    <nameField>
        <label>Payroll Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payroll</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>