force-app/main/default/objects/Payroll__c/fields/Holiday__c.field-meta.xml
<CustomField>
    <fullName>Holiday__c</fullName>
    <inlineHelpText>All holiday leaves in a month that have excluded weekend</inlineHelpText>
    <label>Holiday Leave</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>