force-app/main/default/objects/Payroll__c/fields/Standard_Working_Day__c.field-meta.xml
<CustomField>
    <fullName>Standard_Working_Day__c</fullName>
    <inlineHelpText>Standard work days in a month that have excluded weekend and holiday</inlineHelpText>
    <label>Standard Working Day</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>