force-app/main/default/objects/Payroll__c/fields/TotalPayrollAmount__c.field-meta.xml
<CustomField>
    <fullName>TotalPayrollAmount__c</fullName>
    <label>Total Payroll Amount</label>
    <precision>17</precision>
    <scale>1</scale>
    <type>Currency</type>
</CustomField>