force-app/main/default/objects/Payroll__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Salary_Cycle__c</columns>
    <columns>Year__c</columns>
    <columns>Standard_Working_Day__c</columns>
    <columns>Holiday__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>