force-app/main/default/objects/Payroll__c/listViews/TCL_Accountant_Payroll.listView-meta.xml
<ListView>
    <fullName>TCL_Accountant_Payroll</fullName>
    <filterScope>Queue</filterScope>
    <label>TCL - Accountant</label>
    <queue>TCL_Accountant</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>